--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.7.0
 asyncpg==0.30.0
 bcrypt==4.2.1
+black==24.10.0
 certifi==2024.12.14
 click==8.1.8
 dnspython==2.7.0
@@ -20,14 +21,20 @@ Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mypy-extensions==1.0.0
+packaging==24.2
 passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.3.6
 pydantic==2.10.4
+pydantic-settings==2.7.0
 pydantic_core==2.27.2
 Pygments==2.18.0
 PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+redis==5.2.1
 rich==13.9.4
 rich-toolkit==0.12.0
 shellingham==1.5.4
