--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,12 @@ alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
 asyncpg==0.30.0
-bcrypt==4.2.1
+bcrypt==3.2.0
 black==24.10.0
 certifi==2024.12.14
+cffi==1.17.1
 click==8.1.8
+cryptography==44.0.0
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.6
@@ -16,17 +18,21 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mypy-extensions==1.0.0
+orjson==3.10.13
 packaging==24.2
 passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.3.6
+pycparser==2.22
 pydantic==2.10.4
+pydantic-extra-types==2.10.1
 pydantic-settings==2.7.0
 pydantic_core==2.27.2
 Pygments==2.18.0
@@ -38,12 +44,14 @@ redis==5.2.1
 rich==13.9.4
 rich-toolkit==0.12.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 sqlmodel==0.0.22
 starlette==0.41.3
 typer==0.15.1
 typing_extensions==4.12.2
+ujson==5.10.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.3
