--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mypy-extensions==1.0.0
+numpy==2.2.1
 orjson==3.10.13
 packaging==24.2
 passlib==1.7.4
@@ -44,6 +45,7 @@ PyYAML==6.0.2
 redis==5.2.1
 rich==13.9.4
 rich-toolkit==0.12.0
+shapely==2.0.6
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
