--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxtjs/i18n": "^9.1.4",
     "@pinia/nuxt": "^0.9.0",
     "axios": "^1.7.9",
     "cropperjs": "^1.6.2",
-    "nuxt": "^3.14.1592",
-    "pinia": "^2.3.0",
+    "nuxt": "^3.15.4",
+    "pinia": "^2.3.1",
     "vue": "latest",
-    "vue-i18n": "^10.0.5",
     "vue-router": "latest"
   },
   "devDependencies": {
     "vite-plugin-vuetify": "^2.0.4",
-    "vuetify": "^3.7.6"
+    "vuetify": "^3.7.9"
   }
 }
